--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,11 @@
     <color name="md_theme_dark_surfaceTint">#4FD8EC</color>
     <color name="md_theme_dark_outlineVariant">#3F484A</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="color1">#00BCD4</color>
+    <color name="color2">#03A9F4</color>
+    <color name="color3">#2196F3</color>
+    <color name="color4">#3F51B5</color>
+    <color name="color5">#673AB7</color>
+    <color name="color6">#9C27B0</color>
+    <color name="color7">#E91E63</color>
 </resources>
