feat: add new_note screen and AddNewNoteActivity.java.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,71 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="seed">#006975</color>
-    <color name="md_theme_light_primary">#006874</color>
+    <color name="seed">#354B8C</color>
+    <color name="md_theme_light_primary">#3F5AA9</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#99F0FF</color>
-    <color name="md_theme_light_onPrimaryContainer">#001F24</color>
-    <color name="md_theme_light_secondary">#4A6267</color>
+    <color name="md_theme_light_primaryContainer">#DBE1FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#00174C</color>
+    <color name="md_theme_light_secondary">#00639C</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#CDE7EC</color>
-    <color name="md_theme_light_onSecondaryContainer">#051F23</color>
-    <color name="md_theme_light_tertiary">#535E7D</color>
+    <color name="md_theme_light_secondaryContainer">#CEE5FF</color>
+    <color name="md_theme_light_onSecondaryContainer">#001D33</color>
+    <color name="md_theme_light_tertiary">#7E5700</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#DAE2FF</color>
-    <color name="md_theme_light_onTertiaryContainer">#0E1A37</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDEAC</color>
+    <color name="md_theme_light_onTertiaryContainer">#281900</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FBFCFD</color>
-    <color name="md_theme_light_onBackground">#191C1D</color>
-    <color name="md_theme_light_surface">#FBFCFD</color>
-    <color name="md_theme_light_onSurface">#191C1D</color>
-    <color name="md_theme_light_surfaceVariant">#DBE4E6</color>
-    <color name="md_theme_light_onSurfaceVariant">#3F484A</color>
-    <color name="md_theme_light_outline">#6F797B</color>
-    <color name="md_theme_light_inverseOnSurface">#EFF1F1</color>
-    <color name="md_theme_light_inverseSurface">#2E3132</color>
-    <color name="md_theme_light_inversePrimary">#4FD8EC</color>
+    <color name="md_theme_light_background">#FEFBFF</color>
+    <color name="md_theme_light_onBackground">#1B1B1F</color>
+    <color name="md_theme_light_surface">#FEFBFF</color>
+    <color name="md_theme_light_onSurface">#1B1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E2E1EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#45464F</color>
+    <color name="md_theme_light_outline">#757680</color>
+    <color name="md_theme_light_inverseOnSurface">#F2F0F4</color>
+    <color name="md_theme_light_inverseSurface">#303034</color>
+    <color name="md_theme_light_inversePrimary">#B4C5FF</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#006874</color>
-    <color name="md_theme_light_outlineVariant">#BFC8CA</color>
+    <color name="md_theme_light_surfaceTint">#3F5AA9</color>
+    <color name="md_theme_light_outlineVariant">#C6C6D0</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#4FD8EC</color>
-    <color name="md_theme_dark_onPrimary">#00363D</color>
-    <color name="md_theme_dark_primaryContainer">#004F58</color>
-    <color name="md_theme_dark_onPrimaryContainer">#99F0FF</color>
-    <color name="md_theme_dark_secondary">#B1CBD0</color>
-    <color name="md_theme_dark_onSecondary">#1C3438</color>
-    <color name="md_theme_dark_secondaryContainer">#334B4F</color>
-    <color name="md_theme_dark_onSecondaryContainer">#CDE7EC</color>
-    <color name="md_theme_dark_tertiary">#BBC6EA</color>
-    <color name="md_theme_dark_onTertiary">#24304D</color>
-    <color name="md_theme_dark_tertiaryContainer">#3B4665</color>
-    <color name="md_theme_dark_onTertiaryContainer">#DAE2FF</color>
+    <color name="md_theme_dark_primary">#B4C5FF</color>
+    <color name="md_theme_dark_onPrimary">#022978</color>
+    <color name="md_theme_dark_primaryContainer">#244290</color>
+    <color name="md_theme_dark_onPrimaryContainer">#DBE1FF</color>
+    <color name="md_theme_dark_secondary">#97CBFF</color>
+    <color name="md_theme_dark_onSecondary">#003354</color>
+    <color name="md_theme_dark_secondaryContainer">#004A77</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CEE5FF</color>
+    <color name="md_theme_dark_tertiary">#FDBB41</color>
+    <color name="md_theme_dark_onTertiary">#432C00</color>
+    <color name="md_theme_dark_tertiaryContainer">#604100</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDEAC</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#191C1D</color>
-    <color name="md_theme_dark_onBackground">#E1E3E3</color>
-    <color name="md_theme_dark_surface">#191C1D</color>
-    <color name="md_theme_dark_onSurface">#E1E3E3</color>
-    <color name="md_theme_dark_surfaceVariant">#3F484A</color>
-    <color name="md_theme_dark_onSurfaceVariant">#BFC8CA</color>
-    <color name="md_theme_dark_outline">#899294</color>
-    <color name="md_theme_dark_inverseOnSurface">#191C1D</color>
-    <color name="md_theme_dark_inverseSurface">#E1E3E3</color>
-    <color name="md_theme_dark_inversePrimary">#006874</color>
+    <color name="md_theme_dark_background">#1B1B1F</color>
+    <color name="md_theme_dark_onBackground">#E4E2E6</color>
+    <color name="md_theme_dark_surface">#1B1B1F</color>
+    <color name="md_theme_dark_onSurface">#E4E2E6</color>
+    <color name="md_theme_dark_surfaceVariant">#45464F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C6C6D0</color>
+    <color name="md_theme_dark_outline">#8F909A</color>
+    <color name="md_theme_dark_inverseOnSurface">#1B1B1F</color>
+    <color name="md_theme_dark_inverseSurface">#E4E2E6</color>
+    <color name="md_theme_dark_inversePrimary">#3F5AA9</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#4FD8EC</color>
-    <color name="md_theme_dark_outlineVariant">#3F484A</color>
+    <color name="md_theme_dark_surfaceTint">#B4C5FF</color>
+    <color name="md_theme_dark_outlineVariant">#45464F</color>
     <color name="md_theme_dark_scrim">#000000</color>
-    <color name="color1">#00BCD4</color>
-    <color name="color2">#03A9F4</color>
-    <color name="color3">#2196F3</color>
-    <color name="color4">#3F51B5</color>
-    <color name="color5">#673AB7</color>
-    <color name="color6">#9C27B0</color>
-    <color name="color7">#E91E63</color>
+    <color name="note_color_1">#80DEEA</color>
+    <color name="note_color_2">#81D4FA</color>
+    <color name="note_color_3">#90CAF9</color>
+    <color name="note_color_4">#9FA8DA</color>
+    <color name="note_color_5">#C5E1A5</color>
+    <color name="note_color_6">#A5D6A7</color>
+    <color name="note_color_7">#80CBC4</color>
+
 </resources>
