feat: add themes and custom card color logic.

--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -50,6 +50,6 @@
         android:padding="8dp"
         android:textSize="18sp"
         android:importantForAutofill="no"
-        android:inputType="text" />
+        android:inputType="textMultiLine" />
 
 </LinearLayout>
