--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -35,6 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_marginEnd="6dp"
+                android:layout_marginTop="8dp"
                 android:contentDescription="@string/desc_pinned"
                 app:srcCompat="@drawable/ic_pin_24" />
         </RelativeLayout>
